syntax = "proto3";
import "google/protobuf/timestamp.proto";

package cta;

message Articles {
    repeated Article articles = 1;
}

message Article {
    google.protobuf.Timestamp add_date = 1;
    string chinese_body = 2;
    string chinese_title = 3;
    string url = 4;
    google.protobuf.Timestamp publish_date = 5;
    string author = 6;
    int32 word_count = 7;
    double average_word_difficulty = 8;
    repeated string unique_words = 9;
    Stats stats = 10;
    bool favorite = 11;
}

message Stats {
    int32 known_word_count = 1;
    double known_ratio = 2;
}